--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.github.ajalt:timberkt:1.5.1'
+    implementation 'org.slf4j:slf4j-simple:1.6.1'
+    implementation 'io.github.microutils:kotlin-logging:1.6.22'
+    implementation 'com.google.android.material:material:1.3.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
