--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.6.1'
     implementation 'io.github.microutils:kotlin-logging:1.6.22'
     implementation 'com.google.android.material:material:1.3.0'
+    implementation "com.google.code.gson:gson:2.8.5"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
